# API_LIBRARY

./: .env.example  .gitignore  Dockerfile  Makefile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.md  reqs.txt  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/endpoints/: __init__.py  analytics.py  documents.py  health.py  queries.py
app/core/: config.py  database.py  redis.py
app/models/: __init__.py  analytics.py  document.py  query.py
app/services/: document_service.py  qa_service.py  vector_service.py
docker/mongodb/: init-mongo.js
docker/nginx/: nginx.conf
frontend/: index.html
frontend/static/css/: main.css
frontend/static/js/: api.js  components.js  main.js
scripts/: init_db.py  load_sample_data.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_document_service.py
